fix: Correção de endpoints, testes, Regras de negócio